<resources>
    <string name="app_name">HOMES</string>
    <string name="bem_vindo_a">
        Bem-vindo(a) ao Homes
    </string>
    <string name="entrar">
        ENTRAR
    </string>
    <string name="cadastrar">
        CADASTRAR
    </string>
    <string name="entre_ou_re">
          Entre ou registre-se para começar
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="welcome">Seja bem-vindo novamente</string>
    <string name="txt_login">Faça o login para continuar</string>
    <string name="register">Ainda não tenho conta</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="in">LOGAR</string>
    <string name="singup">Registro</string>
    <string name="up">CADASTRAR</string>
    <string name="singin">Já tem uma conta?</string>
    <string name="ad">Anunciar meu imóvel</string>
    <string name="next">Avançar</string>
    <string name="skip">Pular Etapa</string>
    <string name="type">Que tipo de imóvel você deseja anunciar?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mapa</string>
    <string name="menu_gallery">Pesquisar</string>
    <string name="menu_slideshow">Favoritos</string>
    <string name="menu_tools">Meus Imóveis</string>
    <string name="menu_share">Compartinhar</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_add">Cadastrar imóvel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
